
- Handling an R language objects could result in a segfault when its
  R class was queried (issue #749).

- The conversion of R string arrays to `numpy` arrays was leaving
  R's `NA` value as R NA objects. NAs in this type of arrays are now
  turned to `None` in the resulting `numpy` array (issue #751).

- `rpy2.situation.get_rlib_path()` was returning an environment variable
  with an invalid separator on Windows (mentioned in issue 754).


Release 3.3.6
=============

Bugs fixed
----------

- The unit tests for importing R packages with `lib_loc` were
  broken (issue #720).

- Trying to create a memoryview for an R array with complex values
  was failing with an attribute error.

- Fix the constructor of metaclass
  :class:`rpy2.robjects.methods.RS4Auto_Type`.

- Fix call to end the embedded R in :class:`rpy2.robjects.R.__cleanup__`
  (issue #734).


Release 3.3.5
=============

Bugs fixed
----------

- The callback handler to read input to R returned an
  invalid result, leading to R asking for input
  without ever acknowledging it received it.


Release 3.3.4
=============

Bugs fixed
----------

- Creating an R vector object from a Python object implementing
  the buffer protocol could give incorrect results as C-level
  incompatibilities could be missed (issue #702).

- :func:`rpy2.robjects.packages.importr` could fail when `lib_loc`
  was specified `(issue #705).


Release 3.3.3
=============

Bugs fixed
----------

- Fallback for when `str2lang` is missing (R < 3.6)

- Fix segfault with :meth:`PairListSexpVector.__getitem__` when
  elements of the R pairlist have a `NILSXP` name (issue #700)


Release 3.3.2
=============

Bugs fixed
----------

- Initial fixes to have rpy2 running in ABI mode on Windows.
  Few tests are not passing (many in callbacks for R's C API).

- System detection is now checking for FreeBSD.


Release 3.3.1
=============

Bugs fixed
-----------

- :meth:`rpy2.robjects.conversion.NameClassMap.update` can update